<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgCookie"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:src="@drawable/cookie"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:layout_above="@id/imgCookie"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="42sp"
        />

    <EditText
        android:id="@+id/usrName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/submit_button"
        android:layout_centerHorizontal="true"
        android:ems="40"
        android:hint="Enter name here"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/lblTotal"
        android:layout_centerHorizontal="true"
        android:text="Submit" />

    <TextView
        android:id="@+id/score_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="Score: [0]"
        android:layout_below="@id/imgCookie"
        android:layout_marginTop="50dp"
        />
</RelativeLayout>